--- a/Countries/src/main/resources/i18n/messages_bg.properties
+++ b/Countries/src/main/resources/i18n/messages_bg.properties
@@ -5,3 +5,18 @@ nav_bar_login=Вход
 nav_bar_about=За нас
 nav_bar_home=Начална страница
 nav_bar_login_register=Регистрация
+h1_index=Намерете невероятни държави
+p_index=Не ви се иска да си стоите вкъщи, уморени сте от ограничения? Бъдете свободни! Намерете държава и се насладете на пътуването!
+to_countries=Към държави
+weather=Време в Токио
+h3_plane=Самолет
+p_plane=Това ли е вашият ден за летене?
+h3_ship=Кораб
+p_ship=Когато искате да сте едно цяло с морето!
+h3_motorcycle=Мотоциклет
+p_motorcycle=Когато искате вятърът да духа в лицето ви!
+h3_car=Автомобил
+p_car=Излизате на екскурзия с приятели?
+h2_country_comment=Най-коментираната държава
+p_country_comment=Прочетете повече за най-коментираната държава и не пропускайте възможността да я посетите и да дадете мнението си, за да помогнете на други потребители.
+learn_more=Научете повече
