--- a/Countries/src/main/resources/i18n/messages_en.properties
+++ b/Countries/src/main/resources/i18n/messages_en.properties
@@ -1,6 +1,21 @@
-
 nav_bar_language=Language
 nav_bar_login=Login
 nav_bar_about=About
 nav_bar_home=Home
 nav_bar_login_register=Register
+h1_index=Find amazing countries
+p_index=Sick of staying at home, sick of limitations? Be free! Find a country and enjoy the travel!
+to_countries=To countries
+weather=Weather in Tokyo
+h3_plane=Plane
+p_plane=Is this your flying day?
+h3_ship=Ship
+p_ship=When you want to be one with the sea!
+h3_motorcycle=Motorcycle
+p_motorcycle=When you want the wind to blow on your face!
+h3_car=Car
+p_car=Going on a trip with friends?
+h2_country_comment=The most commented country
+p_country_comment=Read more about the most commented country and do not miss the chance to visit it and give your opinion to help other users.
+learn_more=Learn More
+
